finishing edit and create button and adding arial-label

--- a/Projet5/Views/Shared/_Layout.cshtml
+++ b/Projet5/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 </button>
                 <div class="navbar-collapse collapse d-lg-inline-flex justify-content-between">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
+                  <li aria-label="Acceuil" class="nav-item">
                             <a class="nav-link" id="Home" asp-area="" asp-controller="Voitures" asp-action="Index" style="color: #000;">
                                 Accueil
                             </a>
@@ -31,24 +31,24 @@
 
                         @if (User.Identity!.IsAuthenticated && User.IsInRole("Admin"))
                         {
-                            <li class="nav-item">
+                     <li aria-label="Ajouter une voiture"class="nav-item">
                         <a class="nav-link" id="addCar" asp-action="Create" style="color: #000;">
                                     Ajouter une voiture
                                 </a>
                             </li>
                         }
-                        <li class="nav-item">
+                  <li class="nav-item">
                             @if (User.Identity.IsAuthenticated)
                             {
                                 <form class="d-flex justify-content-center align-items-center" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Voitures", new { area = "" })" method="post">
-                                    <button id="disconect" type="submit" class="nav-link w-100 text-center" style="color: #000; ">
+                           <button aria-label="Deconnexion" id="disconnect" type="submit" class="nav-link w-100 text-center" style="color: #000; ">
                                         Déconnexion
                                     </button>
                                 </form>
                             }
                             else
                             {
-                        <a class="nav-link " id="connect" asp-area="Identity" asp-page="/Account/Login" style="color: #000;">
+                        <a aria-label="Connecxion" class="nav-link " id="connect" asp-area="Identity" asp-page="/Account/Login" style="color: #000;">
                                     Connexion
                                 </a>
                             }
