--- a/Projet5/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Projet5/Areas/Identity/Pages/Account/Login.cshtml
@@ -9,7 +9,7 @@
     <div class="col-md-6">
         <div class="card shadow border-0 rounded my-4">
             <div class="card-header bg-white py-3">
-                <h2 class="text-center fs-4 m-0">Connexion</h2>
+                <h2 class="text-center fs-4 m-0">EXPRESS VOITURE</h2>
             </div>
             <div class="card-body p-4">
                 <form id="account" method="post" asp-route-returnUrl="@Url.Action("Index", "Voitures")">
@@ -26,22 +26,12 @@
                         <label asp-for="Input.Password" class="form-label">Mot de passe</label>
                         <span asp-validation-for="Input.Password" class="text-danger"></span>
                     </div>
-                    
-                    <div class="checkbox mb-3">
-                        <label asp-for="Input.RememberMe" class="form-label">
-                            <input class="form-check-input" asp-for="Input.RememberMe" />
-                            Se souvenir de moi
-                        </label>
-                    </div>
-                    
-                    <div class="d-grid gap-2">
-                        <button id="login-submit" type="submit" class="btn btn-express">Se connecter</button>
-                    </div>
-                    
-                    <div class="mt-3 text-center">
-                        <p>
-                            <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Créer un nouveau compte</a>
-                        </p>
+
+
+                    <div    style="display: flex; justify-content: center; align-items: center;">
+                        <button aria-label="Button pour se connecter" id="login-submit" type="submit" class="btn btn-express">Se connecter</button>
+                        <span style="padding-inline:10px ">ou</span>
+                        <a aria-label="Button pour se s'inscrire" id="registerSubmit" class="btn btn-express" asp-area="Identity" asp-page="/Account/Register">S'inscrire</a>
                     </div>
                 </form>
             </div>
