--- a/Projet5/wwwroot/css/site.css
+++ b/Projet5/wwwroot/css/site.css
@@ -33,8 +33,13 @@ main {
     font-weight: 700;
     font-size: 1.5rem;
 }
-#Home:hover, #disconet:hover, #connect:hover, #addCar:hover {
+#Home:hover, #disconnect:hover, #connect:hover, #addCar:hover {
     font-weight: 500;
+
+}
+#disconnect{
+    border:none;
+    background: #fff;
 }
 .card {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
